030-software/fluxcd/apps/vaultwarden-kubernetes-secrets/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden-kubernetes-secrets
