030-software/fluxcd/apps/vaultwarden-kubernetes-secrets/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-kubernetes-secrets
spec:
  hostnames:
  - vaultwarden-kubernetes-secrets.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: vaultwarden-kubernetes-secrets-dashboard
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
